refactor: 完成 v1.1.7 前后端类型安全重构
后端：
- 消灭 Controller 中的 Map<String, Object>，全面替换为强类型 VO
- 新增 13 个 VO 类（PageVO<T>、UserVO、EvaluationVO 等）
- 引入 UserCreateDTO / UserUpdateDTO，防止非法字段写入
- 抽取 ActivityValidator 统一校验逻辑
- 安全加固：JWT 黑名单、文件上传白名单、CORS 收紧、禁用用户 Token 失效

前端：
- 统一前后端类型契约（ApiResponse<T>、PageResponse<T>）
- 新增 Pinia store（useActivityStore）集中管理活动状态
- 修复 111 个 TypeScript 类型错误，vue-tsc --noEmit 零错误通过
- 统一分页字段 records/total/page/size

Generated with [Claude Code](https://claude.ai/code)
via [Happy](https://happy.engineering)

Co-Authored-By: Claude <noreply@anthropic.com>
Co-Authored-By: Happy <yesreply@happy.engineering>